# normative_evaluation_llms_everyday_dilemmas

./: .gitignore  README.md  pyproject.toml  setup.py
figures/: agreement.ipynb  fig10_appF_scenarios_diff.ipynb  fig1_label_distribution.ipynb  fig2_agreement.ipynb  fig3_repeated_runs.ipynb  fig4_umap.ipynb  fig5_moral_theme_distribution.ipynb  fig7_appB_plurality_vote.ipynb  fig8_appD_word_similarity.ipynb  figure1.ipynb  figure2.ipynb  figure3.ipynb  label_distribution.ipynb  number_reasons.ipynb  reasons.ipynb  scenarios.ipynb  word_analysis.ipynb
moral_foundations_llms/: utils.py
notebooks/: aita_eval.ipynb  analyze_gpt_responses.ipynb  analyze_gpt_responses_exp3.ipynb  analyze_mfd_responses.ipynb  comment_labels.ipynb  compare_gpt_responses.ipynb  create_reference_set.ipynb  get_log_probs.ipynb  preprocess.ipynb  query_gpt.ipynb  query_gpt_labels_comments.ipynb  reconcile_comments.ipynb
scripts/: query_claude.py  query_davinci_logprobs.py  query_gemma.py  query_gpt.py  query_gpt_comments.py  query_gpt_escalation.py  query_gpt_v2.py  query_gpt_v3.py  query_llama.py  query_mistral.py  query_vertex.py  query_vertex_chat.py  run_model.py  run_model_labels.py  train_model.py
src/moral_foundations_llms/: analysis.py  keys.py  loaders.py  models.py  prompts.py  utils.py
src/normative_evaluation_llms_everyday_dilemmas/: keys.py  utils.py
