[project]
name = "normative_evaluation_llms_everyday_dilemmas"
version = "0.0.1"
description = "Normative Evaluations of Large Languages Models Using Everyday Dilemmas"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]